--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 	width: 75%;
 	max-width: 1000px;
 }
+/* Double Slider */
 .slider {
 	position: relative;
 	z-index: 1;
@@ -76,3 +77,21 @@ input[type=range]::-webkit-slider-thumb {
 	background-color: red;
 	-webkit-appearance: none;
 }
+/* Line Ticks */
+.ticks {
+	display: flex;
+	justify-content: space-between;
+	padding: 0 15px;
+	font-size: 1.8em;
+  }
+  .tick {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	width: 3px;
+  
+	height: 35px;
+	border-bottom: #000000 solid 70px;
+	bottom: -40px;
+  }
+  
