--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body {
 	width: 75%;
 	max-width: 1000px;
 }
+
 /* Double Slider */
+
 .slider {
 	position: relative;
 	z-index: 1;
@@ -77,7 +79,9 @@ input[type=range]::-webkit-slider-thumb {
 	background-color: red;
 	-webkit-appearance: none;
 }
+
 /* Line Ticks */
+
 .ticks {
 	display: flex;
 	justify-content: space-between;
@@ -93,5 +97,39 @@ input[type=range]::-webkit-slider-thumb {
 	height: 35px;
 	border-bottom: #000000 solid 70px;
 	bottom: -40px;
-  }
-  
+}
+
+/* Arrows */
+
+.arrow-right,
+.arrow-left{
+	position: absolute;
+	top: 3.6em;
+	left: -20px;
+	display: block;
+	margin: 30px auto;
+	width: 45px;
+	height: 45px;
+	border-top: 3px solid #000;
+	border-left: 3px solid #000;
+}
+.arrow-right{
+	left: 97%;
+}
+.arrow-right{
+	transform: rotate(135deg);
+}
+.arrow-left{
+	transform: rotate(-45deg);
+}
+.arrow-right::after,
+.arrow-left::after{
+	content: "";
+	display: block;
+	width: 3px;
+	height: 45px;
+	background-color: black;
+	transform: rotate(-45deg) translate(15px, 4px);
+	left: 0;
+	top: 0;
+}
